<resources>
    <string name="app_name">FlexY Driver</string>
    <string name="phone_number">Phone Number</string>
    <string name="or">OR</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_valid_number">Not Valid Number</string>
</resources>
