<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/flexYImage"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/flexy_logo"/>

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/flexYImage"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/phone_number"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/flexYImage"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@id/btn_phone"
        android:text="@string/or" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/flexYImage"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/tv_or"
        android:background="@null"
        android:text="@string/email_address"
        android:textAllCaps="false" />

    <RelativeLayout
        android:id="@+id/rlChildEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_phone"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_addressEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp">

            <EditText
                android:id="@+id/et_emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_addressEmailLayout"
            android:layout_marginBottom="18dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/appOrange">

            <EditText
                android:id="@+id/et_PasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_email_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPasswordEmailLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_forgotPassword_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_email_signIn"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlChildPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_phone"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:visibility="gone">

        <!--Add CountryButton here-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_numberPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp">

            <EditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_numberPhoneLayout"
            android:layout_marginBottom="18dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/appOrange">

            <EditText
                android:id="@+id/et_PasswordPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_phone_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPasswordPhoneLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_forgotPassword_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_phone_signIn"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@null"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>